# django-rwanda-portal

./: .dockerignore  .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT_GUIDE.md  LICENSE  README.md  pyproject.toml  requirements.txt
docker/: .env  .env.example  Dockerfile  docker-compose.yml
docker/nginx/: nginx.conf
docs/: api.md  common.md  config.md  core.md
docs/apps/: analytics.md  comments.md  event.md  media.md  messaging.md  notification.md  posts.md  tags.md  users.md
env/: .env  .env.example
src/: pytest.ini
src/api/: urls.py
src/api/v1/: routers.py
src/apps/analytics/: urls.py
src/apps/comments/: urls.py
src/apps/messaging/: urls.py
src/apps/notifications/: urls.py
src/apps/notifications/tests/: __init__.py
src/apps/tags/: apps.py  urls.py  views.py
src/apps/users/: urls.py
src/common/templates/: home.html
src/config/: urls.py
src/config/settings/: __init__.py  base.py  celery.py  dev.py  local.py
src/core/db/: mixins.py
src/core/middleware/: request_logging.py  timing.py
src/core/security/: jwt.py
